Fixed width percentages and general layout issues

--- a/css/main.css
+++ b/css/main.css
@@ -111,7 +111,8 @@ header .content-wrapper {
 
 .header-divider {
   width: 100%;
-
+  height: 1px;
+  margin: 10px 0 20px 0;
 }
 
 header nav {
@@ -126,7 +127,7 @@ header nav ul {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-around;
-  width: 44%;
+  width: 100%;
 }
 
 footer .content-wrapper {
@@ -136,6 +137,7 @@ footer .content-wrapper {
 
 footer {
   flex-direction: column;
+  text-align: center;
 }
 
 footer p {
@@ -152,7 +154,10 @@ footer .social-icons p {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 0;
+}
+
+footer .copyright {
+  margin: 20px 0;
 }
 
 /* Mobile styles ---- HOMEPAGE------ */
@@ -183,6 +188,7 @@ aside {
 }
 
 .features p {
+  justify-content: center;
   margin: 0;
 }
 
@@ -190,15 +196,18 @@ aside {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
-  padding: 20px 0 20px 0;
+}
+
+.features article {
+  width: 63%;
+  margin: 30px 0;
 }
 
 .features .features-items {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
-  padding: 0 70px 0 70px;
-  width: 54%;
+  padding: 20px 0 20px 0;
 }
 
 /* Reviews */
@@ -206,17 +215,18 @@ aside {
 .reviews {
   display: flex;
   justify-content: center;
-  flex-flow: row wrap;
+  flex-flow: row wrap; 
+}
+
+.reviews h2 {
+  margin-bottom: 40px;
 }
 
 .reviews h3 {
-  width: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-flow: row wrap;
   margin: 20px 0;
+  width: 55%;
 }
+
 
 /* ==========================================================================
    About Page
@@ -236,6 +246,10 @@ aside {
     flex-flow: row wrap;
   }
 
+  .contact-content p {
+    margin: 0;
+  }
+
 /* ==========================================================================
    FAQ Page
    ========================================================================== */
@@ -250,6 +264,7 @@ aside {
   .faq .content-wrapper {
     display: flex;
     justify-content: center;
+    margin: 50px 0 0 0;
     align-items: center;
     flex-flow: row wrap;
   }
@@ -343,15 +358,12 @@ aside {
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
-  /* Style adjustments for viewports that meet the condition */
+@media only screen and (min-width: 768px) {
+  /* TABLET STYLES HERE */
 }
 
-@media print,
-  (-webkit-min-device-pixel-ratio: 1.25),
-  (min-resolution: 1.25dppx),
-  (min-resolution: 120dpi) {
-  /* Style adjustments for high resolution devices */
+@media only screen and (min-width: 1200px) {
+  /* DESKTOP STYLES HERE */
 }
 
 /* ==========================================================================
